--- a/InShortsApp/UANewsCardView.xib
+++ b/InShortsApp/UANewsCardView.xib
@@ -5,24 +5,53 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11762"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UANewsCardView">
+        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="UANewsCardView">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NSe-Lg-xNN">
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NSe-Lg-xNN">
                     <rect key="frame" x="16" y="20" width="343" height="627"/>
-                    <color key="backgroundColor" red="1" green="0.59999999999999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="10"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lO6-6b-G4k">
+                            <rect key="frame" x="0.0" y="0.0" width="343" height="270"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="270" id="dzp-2B-GyN"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7u-ni-t6f">
+                            <rect key="frame" x="16" y="286" width="311" height="43"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="43" id="KNJ-CU-g5Q"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3B-aT-iFb">
+                            <rect key="frame" x="16" y="337" width="311" height="21"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="D3B-aT-iFb" secondAttribute="trailing" constant="16" id="QTR-wa-uBN"/>
+                        <constraint firstAttribute="trailing" secondItem="x7u-ni-t6f" secondAttribute="trailing" constant="16" id="X9D-mm-KWT"/>
+                        <constraint firstItem="x7u-ni-t6f" firstAttribute="top" secondItem="lO6-6b-G4k" secondAttribute="bottom" constant="16" id="bLU-0L-DYe"/>
+                        <constraint firstItem="lO6-6b-G4k" firstAttribute="top" secondItem="NSe-Lg-xNN" secondAttribute="top" id="dOo-v7-m54"/>
+                        <constraint firstItem="D3B-aT-iFb" firstAttribute="top" secondItem="x7u-ni-t6f" secondAttribute="bottom" constant="8" id="gqS-d9-B3G"/>
+                        <constraint firstAttribute="trailing" secondItem="lO6-6b-G4k" secondAttribute="trailing" id="hvI-Oc-rYD"/>
+                        <constraint firstItem="lO6-6b-G4k" firstAttribute="leading" secondItem="NSe-Lg-xNN" secondAttribute="leading" id="jhp-HO-Dge"/>
+                        <constraint firstItem="D3B-aT-iFb" firstAttribute="leading" secondItem="NSe-Lg-xNN" secondAttribute="leading" constant="16" id="lFT-8t-baf"/>
+                        <constraint firstItem="x7u-ni-t6f" firstAttribute="leading" secondItem="NSe-Lg-xNN" secondAttribute="leading" constant="16" id="z6l-Nf-LF3"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.0039215686269999999" green="0.63529411759999999" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -39,9 +68,15 @@
                 <userDefinedRuntimeAttribute type="size" keyPath="layer.shadowOffset">
                     <size key="value" width="5" height="5"/>
                 </userDefinedRuntimeAttribute>
+                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                    <integer key="value" value="5"/>
+                </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
             <connections>
                 <outlet property="containerView" destination="NSe-Lg-xNN" id="84b-g9-flc"/>
+                <outlet property="contentLabel" destination="D3B-aT-iFb" id="rXa-f5-35E"/>
+                <outlet property="imageView" destination="lO6-6b-G4k" id="VIp-aU-Qet"/>
+                <outlet property="titleLabel" destination="x7u-ni-t6f" id="wdo-Xs-aji"/>
             </connections>
             <point key="canvasLocation" x="33.5" y="153.5"/>
         </view>
