--- a/InShortsApp/UANewsCardView.xib
+++ b/InShortsApp/UANewsCardView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="UANewsCardView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="UANewsCardView">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -57,9 +57,13 @@
                         <constraint firstItem="xfs-LT-T5D" firstAttribute="top" secondItem="D3B-aT-iFb" secondAttribute="bottom" constant="8" id="wRF-9K-eiE"/>
                         <constraint firstItem="x7u-ni-t6f" firstAttribute="leading" secondItem="NSe-Lg-xNN" secondAttribute="leading" constant="16" id="z6l-Nf-LF3"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
                 </view>
             </subviews>
-            <color key="backgroundColor" red="0.0039215686269999999" green="0.63529411759999999" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="NSe-Lg-xNN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" placeholder="YES" id="0y4-a9-9UZ"/>
                 <constraint firstAttribute="trailing" secondItem="NSe-Lg-xNN" secondAttribute="trailing" constant="16" placeholder="YES" id="NCo-DT-w24"/>
