--- a/InShortsApp/Base.lproj/Main.storyboard
+++ b/InShortsApp/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--News List Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="UAViewController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="UANewsListController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -22,11 +22,35 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="PjK-9Y-chy"/>
+                    <navigationItem key="navigationItem" id="PjK-9Y-chy">
+                        <barButtonItem key="leftBarButtonItem" systemItem="bookmarks" id="Iwe-N9-Jea">
+                            <connections>
+                                <segue destination="wLx-Cr-XSp" kind="show" identifier="UAShowBookmarks" id="xeS-n7-C27"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="137.18140929535232"/>
+        </scene>
+        <!--News List Controller-->
+        <scene sceneID="Shp-SM-bdK">
+            <objects>
+                <viewController id="wLx-Cr-XSp" customClass="UANewsListController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gfA-Cd-42x"/>
+                        <viewControllerLayoutGuide type="bottom" id="sjW-RC-4k9"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Opw-iH-MDj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qJo-VR-4Cg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1868" y="137"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="low-bg-GJB">
