--- a/InShortsApp/Base.lproj/Main.storyboard
+++ b/InShortsApp/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--News List Controller-->
+        <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="UANewsListController" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="UAHomeViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -28,11 +28,34 @@
                                 <segue destination="wLx-Cr-XSp" kind="show" identifier="UAShowBookmarks" id="xeS-n7-C27"/>
                             </connections>
                         </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="u07-Cp-vNZ">
+                            <connections>
+                                <segue destination="LIa-U0-r9Q" kind="show" identifier="UASearch" id="x8W-K9-vnN"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1076" y="137.18140929535232"/>
+        </scene>
+        <!--News List Controller-->
+        <scene sceneID="j3a-Vy-Oq7">
+            <objects>
+                <viewController id="LIa-U0-r9Q" customClass="UANewsListController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5Vj-LO-8eC"/>
+                        <viewControllerLayoutGuide type="bottom" id="HmQ-1e-HuD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lAQ-Pj-7kf">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6fj-35-YO9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1076" y="831"/>
         </scene>
         <!--News List Controller-->
         <scene sceneID="Shp-SM-bdK">
