--- a/InShortsApp/UANewsCardView.xib
+++ b/InShortsApp/UANewsCardView.xib
@@ -25,9 +25,9 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x7u-ni-t6f">
-                            <rect key="frame" x="16" y="276" width="311" height="18"/>
+                            <rect key="frame" x="16" y="276" width="311" height="19.5"/>
                             <gestureRecognizers/>
-                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                             <connections>
@@ -35,19 +35,19 @@
                             </connections>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3B-aT-iFb">
-                            <rect key="frame" x="16" y="302" width="311" height="17"/>
+                            <rect key="frame" x="16" y="303.5" width="311" height="17"/>
                             <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xfs-LT-T5D">
-                            <rect key="frame" x="16" y="327" width="31" height="15"/>
+                            <rect key="frame" x="16" y="328.5" width="31" height="15"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GBS-6k-cpy">
-                            <rect key="frame" x="134" y="352" width="74" height="30"/>
+                            <rect key="frame" x="134" y="353.5" width="74" height="30"/>
                             <state key="normal" title="Read More"/>
                             <connections>
                                 <action selector="readMorePressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="JCM-Hs-nXa"/>
